--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -54,10 +54,10 @@ $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
 $body-color                 : #d1a159;//#252a34;
-$background-color           : #d1a159;//#252a34;
+$background-color           : #282828;//#252a34;
 $code-background-color      : mix(#000, $background-color, 15%);
 $code-background-color-dark : mix(#000, $background-color, 20%);
-$text-color                 : #eaeaea;
+$text-color                 : #c9c2a7;
 $border-color               : mix(#fff, $background-color, 20%);
 
 $primary-color              : #8cd2d5;
