--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -43,7 +43,7 @@
         <li><a href="{{ author.inspire }}"><i class="ai ai-inspire ai-fw icon-pad-right"></i>INSPIRE-HEP</a></li>
       {% endif %}
       {% if author.researchgate %}
-        <li><a href="{{ author.researchgate }}"><i class="ai ai-researchgate icon-pad-right" aria-hidden="true"></i>ResearchGate</a></li>
+        <li><a href="{{ author.researchgate }}"><i class="ai ai-researchgate-square icon-pad-right" aria-hidden="true"></i>ResearchGate</a></li>
       {% endif %}
       {% if author.researchgate %}
         <li><a href="{{ author.researchgate }}"><i class="fa fa-fw fa-researchgate-square icon-pad-right" aria-hidden="true"></i>ResearchGate</a></li>
