--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -43,7 +43,7 @@
         <li><a href="{{ author.inspire }}"><i class="ai ai-inspire ai-fw icon-pad-right"></i> INSPIRE-HEP</a></li>
       {% endif %}
       {% if author.researchgate %}
-        <li><a href="{{ author.researchgate }}"><i class="ai ai-researchgate-square icon-pad-right" aria-hidden="true"></i>  ResearchGate</a></li>
+        <li><a href="{{ author.researchgate }}"><i class="ai ai-researchgate-square icon-pad-right" aria-hidden="true"></i>  &nbsp ResearchGate</a></li>
       {% endif %}
       {% if author.arxiv %}
         <li><a href="{{ author.arxiv }}"><i class="ai ai-arxiv ai-fw icon-pad-right"></i>arXiv</a></li>
