--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -26,7 +26,7 @@
         <li><a href="https://en.wikipedia.org/wiki/Daejeon"><i class="fa fa-fw fa-map-marker" aria-hidden="true"></i> {{ author.location }}</a></li>
       {% endif %}
       {% if author.employer %}
-        <li class="author__desktop"><a href="https://www.ibs.re.kr/eng.do"><i class="fa fa-fw fa-building-columns" aria-hidden="true"></i> {{ author.employer }}</a></li>
+        <li class="author__desktop"><a href="https://www.ibs.re.kr/eng.do"><i class="fa-solid fa-building" aria-hidden="true"></i> {{ author.employer }}</a></li>
       {% endif %}
       {% if author.uri %}
         <li><a href="{{ author.uri }}"><i class="fa fa-fw fa-chain" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].website_label | default: "Website" }}</a></li>
