--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -60,7 +60,7 @@ $code-background-color-dark : mix(#000, $background-color, 20%);
 $text-color                 : #c9c2a7;
 $border-color               : mix(#fff, $background-color, 20%);
 
-$primary-color              : #43b978;//#FFB2B2;//#A5C9FF;//#A5FFC9;//#02557e;;
+$primary-color              : #fa9600;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
@@ -92,10 +92,10 @@ $xing-color                 : #006567;
 /* links */
 $link-color                 : mix(#000, $info-color, 15%) !default;
 $link-color-hover           : mix(#000, $link-color, 25%) !default;
-$link-color-visited         : mix(#fff, $link-color, 15%) !default;
+$link-color-visited         : mix(#fff, $link-color, 25%) !default;
 $masthead-link-color        : $primary-color;
 $masthead-link-color-hover  : mix(#000, $primary-color, 25%) !default;
-$navicon-link-color-hover   : mix(#fff, $primary-color, 75%) !default;
+$navicon-link-color-hover   : mix(#fff, $primary-color, 35%);
 
 
 /*
