--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,17 @@ layout: compress
   <head>
     {% include head.html %}
     {% include head/custom.html %}
+    <style>
+      p {
+        color: red;
+      }
+      .rnb_title {
+        font-size: 18px;
+      }
+      .rnb_body {
+        font-size: 13px;
+      }
+    </style>
   </head>
 
   <body>
